<resources>
    <string name="app_name">GradenWateringScheduler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_plants">My Plants</string>
    <string name="placeholder">placeHolder</string>
    <string name="welcome_to_plant_watering">Welcome to plant watering</string>
    <string name="add_your_first_plant">Add your first plant</string>
    <string name="keep_track_of_your_plant_s_watering_schedules_and_never_forget_to_water_them_again">Keep track of your plant\'s watering schedules and never forget to water them again.</string>
    <string name="multiple_watering_time">Multiple Watering Times</string>
    <string name="app_feature">App Feature:</string>
    <string name="set_multiple_watering_times_per_day_for_each_plant">Set multiple watering times per day for each plant</string>
    <string name="custom_schedules">Custom Schedules</string>
    <string name="create_daily_or_custom_watering_schedules">Create daily or custom watering schedules</string>
    <string name="watering_progress">Watering Progress</string>
    <string name="track_your_watering_progress_throughout_the_day">Track your watering progress throughout the day</string>
    <string name="add_plant_photo">Add Plant Photo</string>
    <string name="image_placeholder">image placeholder</string>
    <string name="my_plant">My Plant</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="plant_name">Plant Name</string>
    <string name="enter_plant_name">Enter plant name</string>
    <string name="plant_type">Plant Type</string>
    <string name="enter_plant_type">Enter plant type</string>
    <string name="schedule_type">Schedule Type</string>
    <string name="custom_days">Custom days</string>
    <string name="every_day">Every day</string>
    <string name="select_watering_days">Select Watering Days:</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="watering_times">Watering Times</string>
    <string name="add_time">Add Time</string>
    <string name="you_can_set_multiple_watering_times_per_day_toggle_the_switch_to_enable_disable_each_time">You can set multiple watering times per day. Toggle the switch to enable/disable each time</string>
    <string name="add_plant">Add Plant</string>
</resources>